<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BuscaEmprego</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_job">EditJob</string>
    <string name="ejob_position">Position</string>
    <string name="ejob_position_hint">Cook, plumber, banker</string>
    <string name="ejob_description">Description</string>
    <string name="ejob_description_hint">Something else</string>
    <string name="ejob_contact">Contact</string>
    <string name="ejob_contact_hint">Give me your number</string>
    <string name="ejob_local">Location</string>
    <string name="ejob_local_hint">Give me your location</string>
    <string name="main_bt_insert_pos">Insert Position</string>
    <string name="main_bt_see_pos">See Position</string>
    <string name="ejob_save">Save job</string>

</resources>
